# GestionAbsences

./: AboutDialog.qml  CMakeLists.txt  DrawerItem.qml  Espacement.qml  GestionEtudiants.qml  GestionModules.qml  GestionSections.qml  Main.qml  PageDrawer.qml  PopupDate.qml  README.md  Synthese.qml  WelcomeInterface.qml  absencedatabasemanager.cpp  absencedatabasemanager.h  absencemodel.cpp  absencemodel.h  etudiantsmodel.cpp  etudiantsmodel.h  main.cpp  manageslectedsectionmodule.cpp  manageslectedsectionmodule.h  misc.cpp  misc.h  modulemodel.cpp  modulemodel.h  planifierseance.cpp  planifierseance.h  presencemodel.cpp  presencemodel.h  printermanage.cpp  printermanage.h  resources.qrc  seancemodel.cpp  seancemodel.h  sectionmodel.cpp  sectionmodel.h  synthesetablemodel.cpp  synthesetablemodel.h  typecoursmodel.cpp  (+1 more)
misc/: basemanager.cpp  basemanager.h  basemodel.cpp  basemodel.h  globals.h  studentmanager.cpp  studentmanager.h  studentmodel.cpp  studentmodel.h
qml/: MyButton.qml  MyComboBox.qml  MyGroupBox.qml  MySpinBox.qml  MyTableView.qml  MyText.qml  MyTextField.qml
